# fastapi-seguranca-autenticacao

./: README.md  criar_tabela.py  logging_config.py  main.py  pyproject.toml
api/v1/: api.py
api/v1/endpoints/: artigo.py  usuario.py
core/: auth.py  configs.py  database.py  deps.py  security.py
models/: __all_models.py  artigo.py  usuario_model.py
schemas/: artigo_schema.py  usuario_schema.py
