[tool.poetry]
name = "fastapi-seguranca-autenticacao"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.26.0"
python-jose = "^3.3.0"
pytz = "^2022.2.1"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
loguru = "^0.6.0"
pydantic = {extras = ["email"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
